# picca_bookkeeper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml  python-app.yml
Examples/: example_config.yaml  example_config_early_3d.yaml  example_config_guadalupe.yaml  example_config_guadalupe_diff_config_path.yaml  example_config_lyacolore_mocks.yaml  run_example_calibration.py  run_example_calibration_lya_lyb.py  run_example_early_3d.py  run_example_simple.py  run_lyacolore_mocks.py
Examples/configs/: example_config_early_3d.yaml  example_config_guadalupe.yaml  example_config_only_correlations.yaml  example_config_only_fits.yaml  example_config_simple.yaml
Examples/configs/data/: iron_FS_sampler_test.yaml  jura_BAO_baseline.yaml  kibo_BAO_baseline.yaml  loa_BAO_baseline.yaml  loa_FS_baseline.yaml  loa_FS_sampler_test.yaml
Examples/configs/mocks/: custom_mocks.yaml  custom_mocks_raw.yaml  custom_mocks_true.yaml  v9_mocks.yaml  v9_mocks_raw.yaml  v9_mocks_true.yaml
Examples/fit_config/auto/: chi2_fixed_BAO.ini  chi2_free_BAO.ini  config_cf_fixed_BAO.ini  config_cf_free_BAO.ini
Examples/fit_config/combined/: chi2_fixed_BAO.ini  chi2_free_BAO.ini  config_cf_fixed_BAO.ini  config_cf_free_BAO.ini  config_xcf.ini
Examples/fit_config/cross/: chi2_fixed_BAO.ini  chi2_free_BAO.ini  config_xcf_fixed_BAO.ini  config_xcf_free_BAO.ini
Examples/notebooks/: compare_configs.ipynb  variation_database.ipynb
picca_bookkeeper/: bookkeeper.py  bookkeeper_searcher.py  constants.py  dict_utils.py  fake_bookkeeper.py  heatmap_analyses.py  hints.py  read_correlations.py  read_deltas.py  read_desi_masks.py  read_fits-Copy1.py  read_fits.py  tasker.py  utils.py
picca_bookkeeper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
picca_bookkeeper/resources/: defaults.yaml  example_config.yaml
picca_bookkeeper/resources/catalogues/: dla.yaml  quasar.yaml
picca_bookkeeper/resources/default_configs/: .Y1v3.yaml  CRP23.yaml  Iron_BAO.yaml  Iron_FS.yaml  Jurav1.yaml  True.yaml  TrueMocks.yaml  Y1v0+.yaml  Y1v1.yaml  Y1v2.yaml  Y1v3.yaml  Y1v4.yaml  Y1v5.yaml  Y1v6.yaml  Y1v7.yaml  dMdB20.yaml  kibo_v1.yaml  loa_fs_v1-no_lyB.yaml  loa_fs_v1.yaml  loa_fs_v2.yaml  loa_fs_v2_no_lyB.yaml  loa_v1.yaml  loa_v2.yaml  quickquasars.yaml  raw.yaml
picca_bookkeeper/scripts/: add_extra_deltas_data.py  add_last_night_column.py  build_full_config.py  cancel_jobids_from_file.py  compare_bookkeepers.py  compute_zeff.py  convert_deltas_format.py  correct_config_zeff.py  fix_bookkeeper_links.py  generate_fit_config.py  mix_DLA_catalogues.py  print_bookkeeper_defaults.py  print_example.py  run_add_extra_deltas_data.py  run_cf.py  run_convert_deltas.py  run_delta_extraction.py  run_fit.py  run_full_analysis.py  run_multiple_fits.py  run_sampler.py  run_xcf.py  search_runs.py  show_bookkeeper_path.py  unblind_correlations.py
tests/: tests_bookkeeper.py  variation_database.ipynb
tests/test_files/: dummy_catalog.fits  example_bad_config.yaml  example_config_custom.yaml  example_config_custom_calib.yaml  example_config_custom_calib_with_calib_corrections.yaml  example_config_custom_calib_with_custom.yaml  example_config_guadalupe.yaml  example_config_guadalupe_calib_copy_corrs.yaml  example_config_guadalupe_calib_copy_corrs_full.yaml  example_config_guadalupe_calib_diff_path.yaml  example_config_guadalupe_conflict.yaml  example_config_guadalupe_dla_bal.yaml  example_config_guadalupe_dla_bal_bal_fail.yaml  example_config_guadalupe_dla_bal_dla_fail.yaml  example_config_guadalupe_lyb.yaml  example_config_guadalupe_only_corr.yaml  example_config_guadalupe_only_corr_fail.yaml  example_config_guadalupe_only_corr_fail_2.yaml  example_config_guadalupe_only_fit.yaml  example_config_guadalupe_only_fit_fail.yaml  example_config_guadalupe_only_fit_fail_2.yaml  example_config_guadalupe_perlmutter.yaml  example_config_guadalupe_perlmutter_compute_zeff.yaml  example_config_guadalupe_perlmutter_cov.yaml  example_config_guadalupe_sampler.yaml  example_config_guadalupe_tracer.yaml  example_config_kp6.yaml  example_config_raw.yaml  example_config_true.yaml
tests/test_files/alt_cat/: dummy_catalog.fits
tests/test_files/calib/configs/: bookkeeper_config.yaml  bookkeeper_config_full.yaml  defaults.yaml  delta_extraction_lya.ini  delta_extraction_lyb.ini  delta_extraction_mgii_r_calib_step_1.ini  delta_extraction_mgii_r_calib_step_2.ini
tests/test_files/calib/scripts/: run_cf_exp_lyb_lya.sh  run_cf_lyb_lya.sh  run_delta_extraction_lya.sh  run_delta_extraction_lyb.sh  run_delta_extraction_mgii_r_calib_step_1.sh  run_delta_extraction_mgii_r_calib_step_2.sh  run_dmat_lyb_lya.sh  run_metal_lyb_lya.sh  run_xcf_exp_lyb.sh  run_xcf_lyb.sh  run_xdmat_lyb.sh  run_xmetal_lyb.sh
tests/test_files/calib_diff_path/configs/: bookkeeper_config.yaml  bookkeeper_config_full.yaml  defaults.yaml  delta_extraction_lya.ini  delta_extraction_lyb.ini
tests/test_files/calib_diff_path/scripts/: run_cf_exp_lyb_lya.sh  run_cf_lyb_lya.sh  run_delta_extraction_lya.sh  run_delta_extraction_lyb.sh  run_dmat_lyb_lya.sh  (+5 more)
tests/test_files/output/: tmp.yaml
(+878 files in other folders)
